--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,19 +5,23 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
+<div class="account-header container text-center">
+	<div class="row">
+		<div class="col-12">
+			<h1>{% trans "Sign Out" %}</h1>
 
-<div class="row signout-container">
-	<div class="col">
-		<h1>{% trans "Sign Out" %}</h1>
-
-		<p>{% trans 'Are you sure you want to sign out?' %}</p>
-
+			<p>{% trans 'Are you sure you want to sign out?' %}</p>
+		</div>
+	</div>
+</div>
+<div class="row account-container">
+	<div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
 		<form method="post" action="{% url 'account_logout' %}">
 		{% csrf_token %}
 		{% if redirect_field_value %}
 		<input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
 		{% endif %}
-		<button type="submit" class="sign-out-button btn btn-lg rounded-4 text-uppercase py-3">{% trans 'Sign Out' %}</button>
+		<button type="submit" class="account-button btn btn-md roundend-4">{% trans 'Sign Out' %}</button>
 		</form>
 	</div>
 </div>
