--- a/templates/base.html
+++ b/templates/base.html
@@ -82,12 +82,12 @@
 
             <div class="col-12 col-lg-3 my-auto text-right search-container">
                 <ul class="list-inline list-unstyled my-0">
-                    <li class="list-inline-item dd-click">
-                        <a class="nav-link dropdown-slide" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true"
+                    <li class="list-inline-item">
+                        <a class="nav-link" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             SEARCH
                         </a>
-                        <div class="dd-click-menu container-fluid dropdown-menu border-0 w-100 p-3 rounded-0 my-0 mx-0" aria-labelledby="mobile-search">
+                        <div class="container-fluid dropdown-menu border-0 w-100 p-3 rounded-0 my-0 mx-0" aria-labelledby="mobile-search">
                             <form method="GET" action="{% url 'products' %}">
                                 <div class="input-group w-100">
                                     <input class="form-control border border-black rounded-0" type="text" name="q"
