--- a/templates/base.html
+++ b/templates/base.html
@@ -116,7 +116,7 @@
                         <div class="dropdown-menu border-0 dd-menu" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                            <a href="" class="dropdown-item"><i class="far fa-clipboard"></i> Product Management</a>
+                            <a href="{% url 'add_product' %}" class="dropdown-item"><i class="far fa-clipboard"></i> Product Management</a>
                             {% endif %}
                             <a href="{% url 'profile' %}" class="dropdown-item"><i class="fas fa-portrait"></i> Profile</a>
                             <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
