--- a/products/static/products/css/product_details.css
+++ b/products/static/products/css/product_details.css
@@ -132,3 +132,19 @@ input#id_qty_25 {
 @media (min-width: 1400px) { 
 
 }
+
+/* CODE FROM https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp */
+
+/* Remove Arrows/Spinners */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
